Cvent Code Files/css-files/fs-template.css
/* last update: June 11 by RJCS */

/* <<<<<<<<<< START OF DEFAULT CVENT CSS - NO NEED TO EDIT >>>>>>>>>> */

.main-nav,
.main-nav_reg {
}
.main-nav,
.main-nav .website_navigation {
  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
}

.speaker-space > div {
  padding-top: 0px !important;
}

.max_width_main > div {
  max-width: 1400px !important;
}

.section_full_fluid > div {
  max-width: 100% !important;
}

.interior_nav_bar img,
.website_navigation img {
  max-width: 280px !important;
  height: auto !important;
}

.nav_links {
  text-transform: uppercase;
}

.website_navigation ul > li {
  padding-right: 8px !important;
}

.website_navigation ul > li:last-child {
  padding-right: 0 !important;
}

.website_navigation nav > ul > li > div {
  padding-top: 5px !important;
  opacity: 0.5;
}

.footer_logo img {
  max-width: 90px !important;
  height: auto !important;
}

.link_color_white a {
  color: #fff;
}

.text_dec_none a {
  text-decoration: none !important;
}

.text_dec_undr {
  text-decoration: underline !important;
}

.img_display_mobile_only img {
  display: none;
}

.head_txt_center {
  margin: 0 auto !important;
}

.divider_light > div {
  border-top: 1px solid rgba(255, 255, 255, 0.3) !important;
}

.max_width_reduced,
.max_width_reduced_1,
.max_width_reduced_2,
.max_width_reduced_3,
.max_width_reduced_4 {
  margin: 0 auto;
}

.max_width_reduced {
  max-width: 57%;
}

.max_width_reduced_1 {
  max-width: 50%;
}

.max_width_reduced_2 {
  max-width: 80%;
}

.max_width_reduced_3 {
  max-width: 60%;
}

.max_width_reduced_4 {
  max-width: 70%;
}

.reg_field_display_horz {
  display: flex;
  flex-direction: column;
}

.mrg_left_0 {
  margin-left: 0 !important;
}

.line_height_sm {
  line-height: 1.1 !important;
}

.line_height_smd {
  line-height: 1.4 !important;
}

.line_height_md {
  line-height: 1.5 !important;
}

.letter_space_md {
  letter-spacing: 0.1em;
}

.btn-primary,
.btn-secondary,
.btn-inverse {
  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

.section_hero_main,
.section_hero_conf {
  background-size: contain;
}

.section_home_2_col > div > div:first-child {
  max-width: 42%;
}

.section_home_2_col > div > div:last-child {
  max-width: 58%;
  margin-left: auto;
}

.main_lockup img {
  max-width: 620px !important;
}

.footer_lockup img {
  max-width: 250px !important;
}

.text_01 {
  border-bottom: 1px solid #888 !important;
}

.speaker_default_widget [class*="SpeakersStyles__speakersContainer"] > div {
  width: 25%;
}

.speaker_default_widget
  [class*="SpeakersStyles__speakersContainer"]
  > div
  [class*="SpeakersStyles__speakerImageContainer"] {
  max-width: 90% !important;
  width: 90% !important;
  height: auto;
}

.sponsor_logo img {
  transition: 0.5s ease;
}

.sponsor_logo img:hover {
  transform: translate(0px, -15px);
}

@media only screen and (min-width: 1024px) and (max-width: 1440px) {
  .section_main_middle > div {
    max-width: 1140px !important;
  }
}

@media only screen and (min-width: 768px) and (max-width: 1024px) {
  .section_main_middle > div {
    max-width: 90% !important;
  }
}
/* ... */

